--- a/HiveArt.ipynb
+++ b/HiveArt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -472,7 +472,7 @@
        "[1001 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -578,7 +578,7 @@
        "freq               286                 38               7"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -661,7 +661,7 @@
        "Name: Date of Contact, Length: 1001, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -1142,7 +1142,7 @@
        "[1001 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "1001"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1779,7 +1779,7 @@
        "[1001 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1801,19 +1801,42 @@
      "output_type": "stream",
      "text": [
       "Date of Contact\n",
-      "March       Abbott GroupArmstrong GroupVeum, McClure and S...\n",
-      "January     Anderson, Kutch and HyattFranecki-FeilMitchell...\n",
-      "November    Armstrong GroupMitchell and SonsJohnston-Schad...\n",
-      "July        Bosco-OrtizKris, Shanahan and QuigleyHagenes I...\n",
-      "June        Brown, Wyman and GrimesHauck GroupMedhurst, An...\n",
+      "October      Wyman, Farrell and HaagOga, Gottlieb and Cruic...\n",
+      "February     Walter IncDonnelly-ChamplinHoppe-BatzAbbott Gr...\n",
+      "December     Veum, McClure and SchusterVeum, McClure and Sc...\n",
+      "September    Stamm-CrooksDenesik, Stehr and CarterJohnston-...\n",
+      "August       Hauck GroupDenesik, Stehr and CarterArmstrong ...\n",
+      "April        Fahey, Wunsch and BashirianWyman, Farrell and ...\n",
+      "May          Fahey, Wunsch and BashirianSanford and SonsEic...\n",
+      "June         Brown, Wyman and GrimesHauck GroupMedhurst, An...\n",
+      "July         Bosco-OrtizKris, Shanahan and QuigleyHagenes I...\n",
+      "November     Armstrong GroupMitchell and SonsJohnston-Schad...\n",
+      "January      Anderson, Kutch and HyattFranecki-FeilMitchell...\n",
+      "March        Abbott GroupArmstrong GroupVeum, McClure and S...\n",
       "Name: Client Name, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "a=df.groupby(df['Date of Contact'].dt.strftime('%B'))['Client Name'].sum().sort_values().head()\n",
+    "a=df.groupby(df['Date of Contact'].dt.strftime('%B'))['Client Name'].sum().sort_values(ascending=False).head(15)\n",
     "print a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
